--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "license": "",
   "homepage": "testProjectSite",
   "devDependencies": {
-    "gulp": "~3.9.0",
     "browser-sync": "~2.12.8",
-    "gulp-sass": "~2.3.1",
+    "gulp": "~3.9.0",
     "gulp-cssnano": "~2.1.2",
-    "gulp-pug": "3.0.2",
+    "gulp-imagemin": "3.0.1",
     "gulp-plumber": "1.1.0",
-    "gulp-watch": "4.3.5",
+    "gulp-pug": "3.0.2",
+    "gulp-sass": "~2.3.1",
+    "gulp-sass-lint": "^1.2.0",
     "gulp-uglify": "1.5.3",
-    "gulp-imagemin": "3.0.1"
+    "gulp-watch": "4.3.5",
+    "sass-lint": "^1.9.1"
   },
   "dependencies": {
     "gulp-jquery": "^1.1.2",
