--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "gulp": "~3.9.0",
     "gulp-cssnano": "~2.1.2",
     "gulp-imagemin": "3.0.1",
+    "gulp-jshint": "^2.0.2",
     "gulp-plumber": "1.1.0",
     "gulp-pug": "3.0.2",
+    "gulp-pug-linter": "^0.4.1",
     "gulp-sass": "~2.3.1",
     "gulp-sass-lint": "^1.2.0",
     "gulp-uglify": "1.5.3",
     "gulp-watch": "4.3.5",
+    "jshint": "^2.9.4",
     "sass-lint": "^1.9.1"
   },
   "dependencies": {
